--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1"> 
-      <title>Techcon website</title>
-    </head>
-    <body>
-      <header>
-         <h1>Techcon 2025</h1>
-         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="register.html">Register</a></li>
-                <li><a href="contact.html">contact</a></li>
-            </ul>
-         </nav>
-      </header>
-      <main>
-         <section>
-            <p>techcon 2025 is the primier technology cconferenc where innoveters, developers and leaders gather to explore future of tech. join us for an forgetable experience.</p>
-            <video controls width="640" height="360">
-                <source src="your-video.mp4" type="video/mp4">
-            </video>
-         </section>
-      </main>
-      <footer>
-        <p>&copy;techcon 2025</p>
-      </footer>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <title>TechCon 2025</title>
+</head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>TechCon 2025</h1>
+    <nav>
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Content -->
+  <main>
+    <section>
+      <h2>Welcome to TechCon 2025</h2>
+      <p>
+        TechCon 2025 is a global technology conference bringing together industry experts, developers, and innovators 
+        to explore the future of tech. Join us for exciting talks, hands-on workshops, and valuable networking opportunities.
+      </p>
+
+      <video width="640" height="360" controls>
+        <source src="promo-video.mp4" type="video/mp4">
+        <track src="subtitles.vtt" kind="subtitles" srclang="en" label="English">
+        Your browser does not support the video tag.
+        <a href="promo-video.mp4" target="_blank">Watch the promotional video here</a>.
+      </video>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 TechCon. All rights reserved. Copyright.</p>
+  </footer>
+
+</body>
 </html>
+
