--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>TechCon 2024 - Schedule</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Schedule for TechCon 2024</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <!-- Header -->
   <header>
-    <h1>TechCon 2024 - Event Schedule</h1>
+    <h1>Schedule for TechCon 2024</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -19,61 +19,76 @@
     </nav>
   </header>
 
-  <!-- Main Content -->
   <main>
     <section>
-      <h2>Conference Schedule</h2>
-      <p>Below is the 3-day agenda for TechCon 2024. All times are in EAT (East Africa Time).</p>
-
-      <table border="1" cellspacing="0" cellpadding="8">
+      <table>
+        <caption>Detailed Schedule of Events for TechCon 2024</caption>
         <thead>
           <tr>
-            <th>Time</th>
-            <th>Session</th>
-            <th>Speaker</th>
-            <th>Location</th>
+            <th scope="col">Time</th>
+            <th scope="col">Session</th>
+            <th scope="col">Speaker</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>09:00 - 10:00</td>
-            <td>Opening Keynote: The Future of AI</td>
-            <td>Dr. Amina Yusuf</td>
-            <td>Main Hall</td>
+            <td>08:30 AM - 09:00 AM</td>
+            <td>Registration & Networking</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>10:30 - 11:30</td>
-            <td>Securing Tomorrow: Cyber Defense Strategies</td>
-            <td>Elijah Njoroge</td>
-            <td>Room A</td>
+            <td>09:00 AM - 10:00 AM</td>
+            <td>Opening Keynote: Shaping the Tech Frontier</td>
+            <td>Dr. Angela Mboya</td>
           </tr>
           <tr>
-            <td>12:00 - 13:00</td>
-            <td>Lunch & Networking</td>
-            <td>—</td>
-            <td>Cafeteria</td>
+            <td>10:15 AM - 11:00 AM</td>
+            <td>Building AI-Powered Solutions</td>
+            <td>Elijah Omondi</td>
           </tr>
           <tr>
-            <td>13:30 - 14:30</td>
-            <td>Scaling with Serverless</td>
-            <td>Ritika Sharma</td>
-            <td>Room B</td>
+            <td>11:15 AM - 12:00 PM</td>
+            <td>Tech for Sustainability</td>
+            <td>Susan Kariuki</td>
           </tr>
           <tr>
-            <td>15:00 - 16:30</td>
-            <td>Panel: Women in Tech Leadership</td>
-            <td>Various Speakers</td>
-            <td>Main Hall</td>
+            <td>12:00 PM - 01:00 PM</td>
+            <td>Lunch Break</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>01:00 PM - 02:00 PM</td>
+            <td>Securing the Future: Cybersecurity 2024</td>
+            <td>Brian Otieno</td>
+          </tr>
+          <tr>
+            <td>02:15 PM - 03:00 PM</td>
+            <td>Next-Gen Cloud Infrastructure</td>
+            <td>Grace Wanjiru</td>
+          </tr>
+          <tr>
+            <td>03:15 PM - 04:00 PM</td>
+            <td>Developer Tools & Productivity Hacks</td>
+            <td>Mark Ndungu</td>
+          </tr>
+          <tr>
+            <td>04:15 PM - 05:00 PM</td>
+            <td>Panel Discussion: Innovation in Africa</td>
+            <td>Moderator: Esther Mwikali + Guests</td>
+          </tr>
+          <tr>
+            <td>05:00 PM - 05:15 PM</td>
+            <td>Closing Remarks</td>
+            <td>Organizing Committee</td>
           </tr>
         </tbody>
       </table>
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 TechCon. All rights reserved. Copyright.</p>
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
+
